--- a/web/apps/chatroom/src/index.html
+++ b/web/apps/chatroom/src/index.html
@@ -5,29 +5,39 @@
     </head>
     <body>
         <h1>WebSocket Chat</h1>
-        <!-- <form action="" onsubmit="sendMessage(event)">
-            <input type="text" id="messageText" autocomplete="off"/>
-            <button>Send</button>
-        </form>
-        <ul id='messages'>
-        </ul> 
-        <script>
-            var ws = new WebSocket("ws://localhost:8000/ws");
-            ws.onmessage = function(event) {
-                var messages = document.getElementById('messages')
-                var message = document.createElement('ele_one')
-                var content = document.createTextNode(event.data)
-                message.appendChild(content)
-                messages.appendChild(message)
-            };
-            function sendMessage(event) {
-                var input = document.getElementById("messageText")
-                ws.send(input.value)
-                input.value = ''
-                event.preventDefault()
-            }
-        </script>  -->
-        <script src="./index.js"></script> 
+  <!-- 需要一进入浏览器就要建立链接 -->
+  <!-- 点击按钮发送消息给服务器 -->
+  输入消息：<input type="text" id="context">
+
+  <button id="btn"> 点击发送消息 </button>
+
+  <div id="charRoom"></div>
+
+    <script src="./index.js"></script>
+
+  <!-- <script>
+    // 用户名
+    const uName = document.getElementById('uName')
+    // 文本框内容
+    const context = document.getElementById('context')
+    // 点击按钮
+    const btn = document.getElementById('btn')
+    
+    btn.onclick = function() {
+      // 将用户名和要发送的内容放在一个对象中，一起传送给后端
+      const values = {
+        uName: uName.value,
+        context: context.value
+      }
+
+      // 清空文本框的内容
+      uName.value = ''
+      context.value = ''
+
+      // 通过 websockte 发送消息
+      websocket.send(JSON.stringify(values))
+    }
+    </script> -->
 
       <!-- <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
       <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
