first version of tunneling

--- a/web/apps/tunneling/src/index.html
+++ b/web/apps/tunneling/src/index.html
@@ -46,33 +46,7 @@
       DownLoad clip
     </button>
 
-
-
-<!--<style>-->
-<!--        #dropBox {-->
-<!--            width: 40%;-->
-<!--            height: 300px;-->
-<!--            background-color: blanchedalmond;-->
-<!--            margin-left: 30%;-->
-<!--        }-->
-<!--        #fileElem {-->
-<!--            display: none;-->
-<!--        }-->
-<!--        #fileElemBox {-->
-<!--            position: relative;-->
-<!--            width: 50%;-->
-<!--            height: 50%;-->
-<!--            top: 25%;-->
-<!--            left: 25%;-->
-<!--            border: 3px #1f1f1e dashed;-->
-<!--        }-->
-<!--</style>-->
-<!--    <div id="dropBox">-->
-<!--        <div id="fileElemBox"></div>-->
-<!--        <input type="file" id="fileElem" multiple accept="image/*" onchange="handleFiles(this.files)">-->
-<!--    </div>-->
-
-
+<img src="" height="200" alt="preview" id="image_preview">
 
 <script src="./index.js"></script>
 
