--- a/web/apps/tunneling/src/index.html
+++ b/web/apps/tunneling/src/index.html
@@ -46,7 +46,12 @@
       DownLoad clip
     </button>
 
-<img src="" height="200" alt="preview" id="image_preview">
+  <div
+      id="emmm"
+      style="color:#4b484b; position: fixed; left: 50%;top: 20%; z-index:100;"
+    >
+      <img src="" height="200" alt="preview" id="image_preview"> 
+    </div>
 
 <script src="./index.js"></script>
 
