--- a/web/apps/chatroom/src/index.html
+++ b/web/apps/chatroom/src/index.html
@@ -1,19 +1,90 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Chat</title>
-    </head>
-    <body>
-        <h1>WebSocket Chat</h1>
-  <!-- 需要一进入浏览器就要建立链接 -->
-  <!-- 点击按钮发送消息给服务器 -->
-  输入消息：<input type="text" id="context">
 
-  <button id="btn"> 点击发送消息 </button>
+<head>
+  <title>Chat</title>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <style>
+    .card {
+      position: absolute;
+      width: 95%;
+      height: 80%;
+      box-shadow: 0px 0px 5px gray;
+      left: 2.5%;
+      top: 5%;
+    }
 
-  <div id="charRoom"></div>
+    #user-form {
+      position: absolute;
+      top: 20%;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    #user-form input {
+      width: 400px;
+      padding-right: 30%;
+    }
+
+    #user-form button {
+      position: absolute;
+      left: 75%;
+      margin-left: 2px;
+      width: 100%;
+    }
+  </style>
+
+</head>
+
+<body>
+  <h1>辣鸡企业微信</h1>
+
+  <!-- <div class="chat-body card">
+    <div class="card-body">
+      <h4 class="card-title text-center"> Chat App </h4>
+      <hr>
+      <form class="form-inline" id="user-form">
+        <div class="row">
+          <div class="col-8">
+            <input type="text" class="form-control" id="user_input" placeholder="Enter your name">
+          </div>
+          <div class="col-4">
+            <button id="start" type="submit" class="btn btn-primary">Start Chat</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+  <script>
+    $(document).ready(function () {
+      $("#user-form").on("submit", function (e) {
+        e.preventDefault();
+        var current_user = $("#user_input").val();
+        if (current_user) {
+          data = { "username": current_user };
+          $.post('/api/register', JSON.stringify(data), function (response) {
+            $(".chat-body").removeClass("hide");
+            $(".chat-register").addClass("hide");
+            window.location.href = "/chat";
+          });
+        }
+      });
+    });
+  </script> -->
+
+  <div class="chat-message">
+    昵称：<input type="text" id="uName">
+    输入消息：<input type="text" id="context">
+
+    <button id="btn"> 点击发送消息 </button>
+    <div id="chatRoom"></div>
+
 
     <script src="./index.js"></script>
+  </div>
 
   <!-- <script>
     // 用户名
@@ -39,10 +110,11 @@
     }
     </script> -->
 
-      <!-- <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+  <!-- <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
       <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
       <py-script>
         print("Hello world emmm")
       </py-script> -->
-    </body>
+</body>
+
 </html>
