--- a/web/apps/chatroom/src/index.html
+++ b/web/apps/chatroom/src/index.html
@@ -40,7 +40,7 @@
 </head>
 
 <body>
-  <h1>辣鸡企业微信</h1>
+  <h1>kunyuan的聊天室</h1>
 
   <!-- <div class="chat-body card">
     <div class="card-body">
@@ -80,7 +80,7 @@
     输入消息：<input type="text" id="context">
     <button id="btn"> 点击发送消息 </button>
 
-    <!-- 发送文件：<input type="file" id="sendFile"> -->
+    发送文件：<input type="file" id="sendFile">
   </div>
 
     <div
